Implement angular routing

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,6 @@
 nav.navbar {
-    background-color: #e3f2fd !important
+  background-color: #e3f2fd !important;
 }
-.navbar-brand {
-    font-weight: bold;
-  }
+.router-link-active {
+  background-color: red;
+}
