--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,10 +19,8 @@
       id="navbarNavAltMarkup"
     >
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#"
-          >About Me <span class="sr-only">(current)</span></a
-        >
-        <a class="nav-item nav-link" href="#">Work</a>
+        <a class="nav-item nav-link" [routerLink]="['/aboutme']">About Me</a>
+        <a class="nav-item nav-link" [routerLink]="['/work']">Work</a>
         <a class="nav-item nav-link" href="#">Life</a>
       </div>
     </div>
