Update base-layout and add images

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "bootstrap/scss/bootstrap";
+
+body {
+    background-color: #d0e9fb !important;
+    padding-top: 15vh; 
+}
