--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
   <div class="container py-2">
     <div class="col-sm-2">
-      <a class="navbar-brand" href="#">Portfolio Janik Kämpfer</a>
+      <a class="navbar-brand" [routerLink]="['/aboutme']">Portfolio Janik Kämpfer</a>
     </div>
     <button
       class="navbar-toggler"
@@ -15,13 +15,13 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div
-      class="collapse navbar-collapse justify-content-center col-sm-2"
+      class="collapse navbar-collapse justify-content-end col-sm-2"
       id="navbarNavAltMarkup"
     >
       <div class="navbar-nav">
-        <a class="nav-item nav-link" [routerLink]="['/aboutme']">About Me</a>
+        <a class="nav-item nav-link" [routerLink]="['/aboutme']">About me</a>
         <a class="nav-item nav-link" [routerLink]="['/work']">Work</a>
-        <a class="nav-item nav-link" href="#">Life</a>
+        <a class="nav-item nav-link" [routerLink]="['/life']">Life</a>
       </div>
     </div>
   </div>
