--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,3 @@
 nav.navbar {
-  background-color: #e3f2fd !important;
-}
-.router-link-active {
-  background-color: red;
+  background-color:  #a1d3f7 !important;
 }
