--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,9 +1,8 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6 col-12 left">1 of 2</div>
+    <div class="col-12 col-md-6 left">1 of 2</div>
     <div class="col-md-6 col-12 right">
-        <img src="https://www.inova.ch/fileadmin/_processed_/0/4/csm_Inova14542_sw_68258159bd.jpg" id="work_image" class="img-rounded float-end" alt="Janik">
-
+        <img src="https://www.inova.ch/fileadmin/_processed_/0/4/csm_Inova14542_sw_68258159bd.jpg" id="work_image" class="img-rounded float-end" alt="Janik Kämpfer work">
     </div>
   </div>
 </div>
