--- a/src/app/life/life.component.html
+++ b/src/app/life/life.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="row">
-      <div class="col-md-6 col-12 left">
-        <img src="https://www.inova.ch/fileadmin/_processed_/2/6/csm_Inova14580_sw_deec123641.jpg" id="life_image" class="img-rounded float-left" alt="Janik">
+      <div class="col-12 col-md-6 left">
+        <img src="https://www.inova.ch/fileadmin/_processed_/2/6/csm_Inova14580_sw_deec123641.jpg" id="life_image" class="img-rounded float-left" alt="Janik Kämpfer life">
       </div>
-      <div class="col-md-6 col-12 right">
+      <div class="col-12 col-md-6 right">
         2 of 2
       </div>
     </div>
