--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container min-vh-100">
   <div class="row">
     <div class="col-12 col-md-6 left">1 of 2</div>
     <div class="col-md-6 col-12 right">
