--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,15 +6,12 @@
     <button
       class="navbar-toggler"
       type="button"
-      data-toggle="collapse"
-      data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
+      (click)="this.toggleNav()"
     >
       <span class="navbar-toggler-icon"></span>
     </button>
     <div
+    [ngClass]="this.showMenuItems ? 'show' : ''"
       class="collapse navbar-collapse justify-content-end col-sm-2"
       id="navbarNavAltMarkup"
     >
