--- a/src/app/life/life.component.html
+++ b/src/app/life/life.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container min-vh-100">
     <div class="row">
       <div class="col-12 col-md-6 left">
         <img src="https://www.inova.ch/fileadmin/_processed_/2/6/csm_Inova14580_sw_deec123641.jpg" id="life_image" class="img-rounded float-left" alt="Janik Kämpfer life">
