--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "bootstrap/scss/bootstrap";
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
+
 html{
     height: 100%;
 }
@@ -10,6 +12,5 @@ body {
     height: 100%;
 
     background-size: cover;
-    background-repeat: no-repeat;
     background-position: center center;
 }
