Change color concept

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -20,6 +20,9 @@
           <li class="ms-3">
             <a class="text-muted" href="https://ch.linkedin.com/company/inova-solutions-ag"><i class="bi bi-linkedin"></i></a>
           </li>
+          <li class="ms-3">
+            <a class="text-muted" href="https://github.com/jjaanniikk"><i class="bi bi-github"></i></a>
+          </li>
         </ul>
       </div>
     </div>
