--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,6 @@
 nav.navbar {
   /* background-color:  #a1d3f7 !important; */
   /*background-color: transparent !important; */
-  background-color: #529bde !important;
+  background-color: #ddd6d0 !important;
   /* border-bottom: 1px solid #333333; */
 }
