--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,10 +7,9 @@ html{
 }
 
 body {
-    background-image: url('assets/sky.jpeg');
+    background-image: url('assets/background.jpeg');
     padding-top: 15vh; 
     height: 100%;
-
     background-size: cover;
     background-position: center center;
 }
