Update "about" site

--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,8 +1,39 @@
-<div class="container min-vh-100">
+<div class="container">
   <div class="row">
-    <div class="col-12 col-md-6 left">1 of 2</div>
-    <div class="col-md-6 col-12 right">
-        <img src="https://www.inova.ch/fileadmin/_processed_/0/4/csm_Inova14542_sw_68258159bd.jpg" id="work_image" class="img-rounded float-end" alt="Janik Kämpfer work">
+    <div class="col-12">
+      <h3 class="display-4">Personalien</h3>
+    </div>
+    <div class="col-12 col-md-4 left">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item fw-bold">Vorname, Name</li>
+        <li class="list-group-item fw-bold">Adresse</li>
+        <li class="list-group-item fw-bold">PLZ, Ort</li>
+        <li class="list-group-item fw-bold">Telefon</li>
+        <li class="list-group-item fw-bold">E-Mail</li>
+        <li class="list-group-item fw-bold">Geburtsdatum</li>
+        <li class="list-group-item fw-bold">Heimatort</li>
+        <li class="list-group-item fw-bold">Nationalität</li>
+      </ul>
+    </div>
+    <div class="col-12 col-md-4 left">
+      <ul class="list-group list-group-flush list-group-2">
+        <li class="list-group-item">Janik K.</li>
+        <li class="list-group-item">Loremipsum 99</li>
+        <li class="list-group-item">9999 voluptua</li>
+        <li class="list-group-item">079 000 00 00</li>
+        <li class="list-group-item">lorem@ipsum.com</li>
+        <li class="list-group-item">01.01.1900</li>
+        <li class="list-group-item">Loremipsum</li>
+        <li class="list-group-item">Loremipsum</li>
+      </ul>
+    </div>
+    <div class="col-12 col-md-4">
+      <img
+        src="https://www.inova.ch/fileadmin/_processed_/0/4/csm_Inova14542_sw_68258159bd.jpg"
+        id="work_image"
+        class="img-rounded float-end"
+        alt="Janik Kämpfer work"
+      />
     </div>
   </div>
 </div>
