--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row">
       <div class="col-10 d-flex align-items-center">
-        <span class="mb-3 mb-md-0 text-muted">&copy; 2023 Janik Kämpfer</span>
+        <span class="mb-3 mb-md-0 text-muted">&copy; 2023 Janik K.</span>
       </div>
       <div class="col-2">
         <ul class="justify-content-end list-unstyled d-flex">
@@ -22,6 +22,9 @@
           </li>
           <li class="ms-3">
             <a class="text-muted" href="https://github.com/jjaanniikk"><i class="bi bi-github"></i></a>
+          </li>
+          <li class="ms-3">
+            <a class="text-muted" href="mailto:lorem@ipsum.com"><i class="bi bi-envelope-at"></i></a>
           </li>
         </ul>
       </div>
