--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,4 +1,10 @@
 footer {
   border-top: 1px solid #333333 !important;
-  background-color: #ddd6d0 !important;
+  /* background-color: #ddd6d0 !important; */
+  background-color: transparent !important;
+  margin-top: 7% !important;
+}
+
+.bold {
+  font-weight: bold !important;
 }
