--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
   <div class="container py-2">
     <div class="col-sm-2">
-      <a class="navbar-brand" [routerLink]="['/aboutme']">Portfolio Janik Kämpfer</a>
+      <a class="navbar-brand" [routerLink]="['/aboutme']">Portfolio Janik K.</a>
     </div>
     <button
       class="navbar-toggler"
