--- a/src/app/aboutme/aboutme.component.scss
+++ b/src/app/aboutme/aboutme.component.scss
@@ -1,4 +1,15 @@
 #work_image {
-    width: 50%;
+    width: 70%;
     border-radius: 5%;
 }
+
+.display-4 {
+    font-size: 2em;
+    margin-bottom: 1em;
+}
+
+.list-group-item {
+    background-color: transparent !important;
+    border-bottom: 1px solid #333333 !important;
+}
+
