Update menu-structure & vh

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container min-vh-100">
     <div class="row">
       <div class="col-12 col-md-6 left">
-        1 of 1 work
+        1 of 1 home
       </div>
       <div class="col-12 col-md-6 right">
         2 of 2
