--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container min-vh-100">
   <div class="row">
     <div class="col-12">
       <h3 class="display-4">Personalien</h3>
