--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,9 +16,10 @@
       id="navbarNavAltMarkup"
     >
       <div class="navbar-nav">
-        <a class="nav-item nav-link" [routerLink]="['/aboutme']">About me</a>
+        <a class="nav-item nav-link" [routerLink]="['/']">Home</a>
         <a class="nav-item nav-link" [routerLink]="['/work']">Work</a>
         <a class="nav-item nav-link" [routerLink]="['/life']">Life</a>
+        <a class="nav-item nav-link" [routerLink]="['/about']">About</a>
       </div>
     </div>
   </div>
