--- a/src/app/life/life.component.scss
+++ b/src/app/life/life.component.scss
@@ -2,3 +2,20 @@
     width: 50%;
     border-radius: 5%;
 }
+
+.display-4 {
+    font-size: 2em;
+    margin-bottom: 1em;
+}
+
+.display-5 {
+    font-size: 1.5em;
+}
+
+.aareData {
+    font-weight: bold;
+}
+
+a{
+    color: black;
+}
