--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -1,10 +1,13 @@
 <div class="container min-vh-100">
     <div class="row">
+      <div class="col-12">
+        <h3 class="display-4">Berufstätigkeit</h3>
+      </div>
       <div class="col-12 col-md-6 left">
-        1 of 1 work
+        <h4 class="display-5">Arbeitserfahrung</h4>
       </div>
       <div class="col-12 col-md-6 right">
-        2 of 2
+        <h4 class="display-5">Aus- und Weiterbildung</h4>
       </div>
     </div>
   </div>
