Update life and home component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,23 @@
 <div class="container min-vh-100">
     <div class="row">
-      <div class="col-12 col-md-6 left">
-        1 of 1 home
+      <div class="col-12 col-md-8 left">
+        <div class="jumbotron">
+          <h1 class="display-4">Hello, world!</h1>
+          <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+          <hr class="my-4">
+          <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+          <p class="lead">
+            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+          </p>
+        </div>
       </div>
-      <div class="col-12 col-md-6 right">
-        2 of 2
+      <div class="col-12 col-md-4 left">
+        <img
+        src="https://www.inova.ch/fileadmin/_processed_/0/4/csm_Inova14542_sw_68258159bd.jpg"
+        id="work_image"
+        class="img-rounded float-end"
+        alt="Janik Kämpfer work"
+      />
       </div>
     </div>
   </div>
