--- a/src/app/life/life.component.html
+++ b/src/app/life/life.component.html
@@ -8,8 +8,15 @@
       </div>
       <div class="col-12 col-md-6 right">
         <h4 class="display-5">Fussball</h4>
+        <div>
+          <p>Als begeisterter Fußballfan verbinde ich nicht nur eine tiefe Leidenschaft für das Spiel, 
+            sondern auch ein fundiertes Verständnis für die taktischen Nuancen und die Dynamik auf dem Spielfeld. 
+            Meine Hingabe zum Fußball geht über das bloße Zuschauen hinaus, da ich regelmäßig Spiele verfolge, 
+            Statistiken analysiere und aktiv am Fußballgeschehen teilnehme.</p>
+        </div>
         <h4 class="display-5">Aareschwumm</h4>
         <div *ngIf="data">
+          <p>Im Sommer bin ich häufig in der Aare anzutreffen. Aus diesem Grund nachfolgend die aktuelle Aare-Temperatur.</p>
           <p>D Aaretemperatur in Bärn bereit aktuell <span class="aareData">{{data.aare}} C°</span> 
             (gmässe bir Mässstation <span class="aareData">{{data.longname}}</span>). 
             Dr <a href="https://aare.guru/#bern" target="_blank">Aare Guru</a> 
