--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -5,9 +5,65 @@
       </div>
       <div class="col-12 col-md-6 left">
         <h4 class="display-5">Arbeitserfahrung</h4>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item list-item">
+            Aug. 2015 - Jul. 2019
+            <br>
+            Lernender Informatiker Fachrichtung Applikationsentwicklung
+            <br>
+            - Staatssekretariat für Wirtschaft SECO
+          </li>
+          <li class="list-group-item list-item">
+            Aug. 2020 - Aug. 2021
+            <br>
+            Software Tester
+            <br>
+            - Identitas AG
+          </li>
+          <li class="list-group-item list-item">
+            Sep. 2021 - heute
+            <br>
+            IT Projektleiter
+            <br>
+            - inova:solutions AG
+          </li>
+        </ul>
       </div>
       <div class="col-12 col-md-6 right">
         <h4 class="display-5">Aus- und Weiterbildung</h4>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item list-item">
+            Aug. 2015 - Jul. 2019
+            <br>
+            Berufsschule
+            <br>
+            - GIBB Berufsfachschule Bern
+          </li>
+          <li class="list-group-item list-item">
+            Okt. 2018
+            <br>
+            HERMES 5 - Foundation Examination
+          </li>
+          <li class="list-group-item list-item">
+            Aug. 2019 - Jul. 2020
+            <br>
+            Berufsmaturität
+            <br>
+            - GIBB Berufsfachschule Bern
+          </li>
+          <li class="list-group-item list-item">
+            Aug. 2021
+            <br>
+            ISTQB Certified Tester Foundation Level
+          </li>
+          <li class="list-group-item list-item">
+            Sep. 2021 - Jul. 2025
+            <br>
+            Bachelor of Science Wirtschaftsinformatik
+            <br>
+            - Berner Fachhochschule
+          </li>
+        </ul>
       </div>
     </div>
   </div>
