--- a/src/app/work/work.component.scss
+++ b/src/app/work/work.component.scss
@@ -7,3 +7,8 @@
     font-size: 1.5em;
     margin-bottom: 1em;
 }
+
+.list-item {
+    background-color: transparent !important;
+    border-color: black;
+}
