Update "home" page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,13 +2,14 @@
     <div class="row">
       <div class="col-12 col-md-8 left">
         <div class="jumbotron">
-          <h1 class="display-4">Hello, world!</h1>
-          <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+          <h1 class="display-4">Ciao a tutti!</h1>
+          <p class="lead">Code, Kreativität und Karriere</p>
           <hr class="my-4">
-          <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-          <p class="lead">
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-          </p>
+          <p>            
+            Willkommen auf meiner digitalen Spielwiese, wo Code und Kreativität Hand in Hand gehen und die Geschichte meiner Karriere bilden. Hier verschmelzen nicht nur Zeilen des Codes, sondern auch Pinselstriche meines Lebens.
+            Begleite mich durch den Code, der nicht nur Maschinen antreibt, sondern auch meine Leidenschaft für logisches Denken zeigt. Erlebe, wie Design und Ästhetik auf den Code treffen und Innovation zum Leben erweckt wird. 
+            Und wenn ich nicht vor dem Bildschirm sitze, finde mich auf dem Fußballplatz, wo Leidenschaft und Teamgeist die Regeln bestimmen. Oder vielleicht in der erfrischenden Aare, wo Schwimmen nicht nur eine sportliche Aktivität ist, sondern auch meine Seele belebt.
+            Mach es dir gemütlich, schnapp dir eine virtuelle Tasse Kaffee, und lass uns gemeinsam durch meine Vergangenheit, Gegenwart und Zukunft scrollen. Willkommen in meinem digitalen Portfolio – einem Mosaik aus Leidenschaften und Projekten!</p>
         </div>
       </div>
       <div class="col-12 col-md-4 left">
